namespace GameOfLifeOOP;

public enum CellType
{
    Empty,
    White,
    Black
}