namespace GameOfLifeOOP;

public enum PatternCell
{
    Empty,
    Alive,   
    Any     
}
