namespace GameOfLifeOOP;

public enum PatternType
{
    Block,
    Beehive,
    Blinker,
    Glider,
    Pentadecathlon
}