@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false
skinparam ArrowColor DarkBlue
skinparam ArrowFontSize 12
skinparam classFontSize 12
skinparam classFontName "Consolas"
skinparam rectangle {
  BackgroundColor<<WorldFactory>> LightBlue
  BackgroundColor<<Strategy>> LightYellow
  BackgroundColor<<Cell>> LightGreen
  BackgroundColor<<Terrain>> LightPink
}

title Game of Life OOP - UML Диаграмма

' Классы клеток
class Cell <<Cell>> {
    +int X
    +int Y
    +CellType Type
    +PlanNext(CellContext ctx)
}

class CellContext {
    +CellType Self
    +int WhiteN
    +int BlackN
    +int AliveN
}

enum CellType {
    Empty
    White
    Black
}

' Интерфейс стратегии
interface ICellLifeStrategy <<Strategy>> {
    +CellType GetNext(CellContext ctx)
}

' Конкретные стратегии Classic
class ClassicEmptyStrategy <<Strategy>>
class ClassicWhiteStrategy <<Strategy>>

' Конкретные стратегии Colonies
class ColonyWhiteStrategy <<Strategy>>
class ColonyBlackStrategy <<Strategy>>

' Провайдер стратегий
interface ICellStrategyProvider {
    +ICellLifeStrategy For(CellType type)
}

class CellStrategyProvider {
    -Dictionary<CellType, ICellLifeStrategy> strategies
    +For(CellType type)
}

' Фабрика клеток
interface ICellFactory {
    +Cell Create(int x, int y, CellType type)
}

class SimpleCellFactory {
    -ICellStrategyProvider strategies
    +Create(int x, int y, CellType type)
}

' Фабрика мира
interface IWorldFactory <<WorldFactory>> {
    +ICellStrategyProvider CreateStrategies()
    +ICellFactory CreateCellFactory(ICellStrategyProvider strategies)
}

class ClassicWorldFactory <<WorldFactory>>
class ColoniesWorldFactory <<WorldFactory>>{
    +InitializeColonyManager(Terrain terrain, PatternTerrainDecorator patterns)
    +ColonyManager ColonyManager
}

' Terrain
class Terrain <<Terrain>> {
    -Cell[,] cells
    +Update()
    +Reinitialize(ICellFactory factory)
    +GetCells()
    -BuildContext(Cell cell)
    -GetNeighbors(Cell cell)
}

' ITerrain
interface ITerrain {
  +GetCells() : Cell[,]
  +Update()
  +Draw(Graphics g)
  +DrawCell(Graphics g, Cell cell)
  +Reinitialize(ICellFactory factory)
}

' MainWindow
class MainWindow {
    -ITerrain terrain
    -Terrain baseTerrain
    -Timer timer
    -IWorldFactory currentFactory
    -ICellFactory cellFactory
    -PatternTerrainDecorator patterns
    -StatisticsTerrainDecorator stats
    -ColonyManager colonyManager
    +MainWindow()
    +OnModeChanged(string mode)
    +MainWindow_Paint()
}

' Паттерны

enum PatternCell {
  Empty
  Alive
  Any
}

enum PatternType {
  Block
  Blinker
  Glider
  Pentadecathlon
  Hive
}

abstract class PatternBase {
  +Type : PatternType
  +Mask : PatternCell[,]
  +IsMatch(ITerrain terrain, Cell cell) : bool
}

class BlockPattern
class BlinkerPattern
class GliderPattern
class PentadecathlonPattern
class HivePattern


class Patterns {
  +patterns : List<PatternBase>
}

Patterns o-- PatternBase

class PatternTerrainDecorator {
  -inner : ITerrain
  -patterns : List<PatternBase>
  +PatternCells : HashSet<(int,int)>
  +PatternCounts : Dictionary<PatternType, int>
  +RecalculatePatterns()
  +DrawCell(Graphics g, Cell cell, bool isPattern)
}

' Статистика

class StatisticsTerrainDecorator {
    -ITerrain _inner
    -PatternTerrainDecorator patternStats
}

class FieldStatistics{
    +WhiteCount 
    +BlackCount
    +WhiteDelta
    +BlackDelta 
    +TimeSpan UpdateTime 
    +TimeSpan ScanTime 
    +PatternCounts : ReadOnlyDictionary<PatternType, int>
    +UpdateFieldStatistics(StatsSnapshot before, StatsSnapshot after, TimeSpan update, TimeSpan scan, IReadOnlyDictionary<PatternType, int>? patterns)
    -Percent(int before, int after)
}

class StatsSnapshot{
    +Take(ITerrain terrain)
}

PatternTerrainDecorator ..> PatternBase
PatternTerrainDecorator ..|> ITerrain
PatternTerrainDecorator ..> ITerrain

PatternBase <|.. BlockPattern
PatternBase <|.. BlinkerPattern
PatternBase <|.. GliderPattern
PatternBase <|.. PentadecathlonPattern
PatternBase <|.. HivePattern

FieldStatistics ..> PatternType
FieldStatistics ..> StatsSnapshot

StatisticsTerrainDecorator ..> ITerrain
StatisticsTerrainDecorator ..> PatternTerrainDecorator

StatsSnapshot ..> ITerrain

' Связи
PatternBase ..> PatternCell
PatternBase ..> PatternType
PatternBase ..> Cell


Cell --> ICellStrategyProvider : uses
Cell --> CellContext : uses
CellContext --> CellType

ICellLifeStrategy <|.. ClassicEmptyStrategy
ICellLifeStrategy <|.. ClassicWhiteStrategy
ICellLifeStrategy <|.. ColonyWhiteStrategy
ICellLifeStrategy <|.. ColonyBlackStrategy

ICellStrategyProvider <|.. CellStrategyProvider
CellStrategyProvider --> ICellLifeStrategy

ICellFactory <|.. SimpleCellFactory
SimpleCellFactory --> Cell

IWorldFactory <|.. ClassicWorldFactory
IWorldFactory <|.. ColoniesWorldFactory

ClassicWorldFactory --> ICellStrategyProvider
ClassicWorldFactory --> ICellFactory

ColoniesWorldFactory --> ICellStrategyProvider
ColoniesWorldFactory --> ICellFactory
ColoniesWorldFactory --> ColonyManager

Terrain --> Cell
Terrain --> ICellFactory : uses
Terrain --> CellContext : BuildContext
Terrain --> Cell : GetNeighbors

Terrain ..|> ITerrain

MainWindow --> Terrain
MainWindow --> ITerrain
MainWindow --> IWorldFactory
MainWindow --> ICellFactory

@enduml
